@@ -550,21 +550,6 @@
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.vm.compiler/org.graalvm.compiler.replacements.nodes=tornado.runtime
                                 </arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.graph=tornado.drivers.opencl,tornado.drivers.ptx
-                                </arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.util=tornado.drivers.opencl,tornado.drivers.ptx
-                                </arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.replacements.nodes=tornado.runtime
-                                </arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.graph=tornado.drivers.opencl,tornado.drivers.ptx
-                                </arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.util=tornado.drivers.opencl,tornado.drivers.ptx
-                                </arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -797,12 +782,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.12.1</version>
+            <version>2.13.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.12.1</version>
+            <version>2.13.2</version>
         </dependency>
     </dependencies>
     <modules>
